tests/ui/feature-gates/feature-gate-const_refs_to_cell.stderr
error[E0658]: cannot borrow here, since the borrowed element may contain interior mutability
  --> $DIR/feature-gate-const_refs_to_cell.rs:3:13
   |
LL |     let y = &x;
   |             ^^
   |
   = note: see issue #80384 <https://github.com/rust-lang/rust/issues/80384> for more information
   = help: add `#![feature(const_refs_to_cell)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: cannot borrow here, since the borrowed element may contain interior mutability
  --> $DIR/feature-gate-const_refs_to_cell.rs:8:13
   |
LL |     let y = &*&mut x;
   |             ^^^^^^^^
   |
   = note: see issue #80384 <https://github.com/rust-lang/rust/issues/80384> for more information
   = help: add `#![feature(const_refs_to_cell)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: cannot borrow here, since the borrowed element may contain interior mutability
  --> $DIR/feature-gate-const_refs_to_cell.rs:13:13
   |
LL |     let y = &*(&mut x as *mut _);
   |             ^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #80384 <https://github.com/rust-lang/rust/issues/80384> for more information
   = help: add `#![feature(const_refs_to_cell)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0658`.
